k8s/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: queue-system
  labels:
    name: queue-system
    app.kubernetes.io/part-of: queue-system
