k8s/chat-server-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-server
  namespace: queue-system
  labels:
    app: chat-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat-server
  template:
    metadata:
      labels:
        app: chat-server
    spec:
      containers:
        - name: chat-server
          image: 061039804626.dkr.ecr.ap-northeast-2.amazonaws.com/chat-server:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080 # ★ 여기 8080

          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"

          readinessProbe:
            tcpSocket:
              port: 8080 # 8080
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 1
            failureThreshold: 3

          livenessProbe:
            tcpSocket:
              port: 8080 # 8080
            initialDelaySeconds: 15
            periodSeconds: 20
            timeoutSeconds: 1
            failureThreshold: 3
