k8s/queue-api-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: queue-api
  namespace: queue-system
  labels:
    app: queue-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: queue-api
  template:
    metadata:
      labels:
        app: queue-api
    spec:
      containers:
        - name: queue-api
          image: nginx
          imagePullPolicy: Always
          ports:
            - containerPort: 8080

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"

          readinessProbe:
            httpGet:
              path: /health # 실제 코드에 맞게 조정
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /health # 실제 코드에 맞게 조정
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
