k8s/queue-manager-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: queue-manager
  namespace: queue-system
  labels:
    app: queue-manager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: queue-manager
  template:
    metadata:
      labels:
        app: queue-manager
    spec:
      containers:
        - name: queue-manager
          image: nginx
          imagePullPolicy: Always

          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "300m"
              memory: "256Mi"
